--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                         <a href="training.html" class="dropdown-item">Training</a>
                     </div>
                 </div>
-                <a href="contact.html" class="nav-item nav-linkv active">Contact</a>
+                <a href="contact.html" class="nav-item nav-link active">Contact</a>
             </div>
             <a href="" class="contact-button btn py-4 px-lg-5 d-none d-lg-block shine">Join Now<i class="fa fa-arrow-right ms-3"></i></a>
         </div>
@@ -270,5 +270,6 @@
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
